@@ -1,3 +1,9 @@
+2011-11-27 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/core/na-gtk-utils.c (dump_children):
+	Also dump the address of the child widget.
+	Also dump children which do not have a name (dynamically allocated).
+
 2011-11-26 Pierre Wieser <pwieser@trychlos.org>
 
 	* src/nact/nact-tree-ieditable.c (do_insert_before): Re-reverse the list
